--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
-#wrapping_div {
-    position: absolute;
-    height: 200px;
-    width: 400px;
-    margin: -100px 0 0 -200px;
-    top: 50%;
-    left: 50%;
+
+.fixed-bottom-fab {
+    position: fixed;
+    bottom: 25px;
+    z-index: 1;
 }
